...
}

- (void)viewDidLoad
{
    [super viewDidLoad];
    
    UIBarButtonItem *doneItem = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Done", nil) style:UIBarButtonItemStyleDone target:self action:@selector(dismiss)];
    doneItem.accessibilityLabel = @"Close Learn More Modal";
    self.navigationItem.rightBarButtonItem = doneItem;
        
    UIScrollView *scrollView = [UIScrollView new];
    scrollView.contentInsetAdjustmentBehavior = UIScrollViewContentInsetAdjustmentNever;
    scrollView.translatesAutoresizingMaskIntoConstraints = NO;
    [self.view addSubview:scrollView];
...
}

- (nullable NSString *)bannerName
{
    switch (self.configuration.type) {
        case ShippedSuiteTypeGreen:
            return @"green_banner";
        case ShippedSuiteTypeGreenAndShield:
            return self.configuration.isInformational ? @"green_banner" : @"green+shield_banner";
        default:
            return nil;
    }
}
...
    UIStackView *hStackView = [UIStackView new];
    hStackView.spacing = 5;
    hStackView.distribution = UIStackViewDistributionEqualSpacing;
    hStackView.translatesAutoresizingMaskIntoConstraints = NO;
    
    if (self.configuration.type == ShippedSuiteTypeGreen) {
        UIButton *download = [self linkButtonWithText:NSLocalizedString(@"Download Shipped", nil) selector:@selector(downloadPressed:)];
        [hStackView addArrangedSubview:download];
    } else {
        UIButton *reportAnIssue = [self linkButtonWithText:NSLocalizedString(@"Report an Issue", nil) selector:@selector(reportAnIssuePressed:)];
        [hStackView addArrangedSubview:reportAnIssue];
    }
    
    UIView *separator0 = [self separator];
    [hStackView addArrangedSubview:separator0];
    
    UIButton *termsOfService = [self linkButtonWithText:NSLocalizedString(@"Terms of Service", nil) selector:@selector(termsOfServicePressed:)];
    [hStackView addArrangedSubview:termsOfService];
    
    UIView *separator1 = [self separator];
    [hStackView addArrangedSubview:separator1];
    
    UIButton *privacyPolicy = [self linkButtonWithText:NSLocalizedString(@"Privacy Policy", nil) selector:@selector(privacyPolicyPressed:)];
    [hStackView addArrangedSubview:privacyPolicy];
    
    return hStackView;
}

- (UIView *)copyrightView
...
